# CaDiCaL-Reinforcement-Learning-SAT-Solver

./: .gitignore  LICENSE  README.md  commands.md  implementation.txt  requirements.txt  training_pipeline.txt
bridge/: CMakeLists.txt  README.md  pybridge.cpp
cadical/: CMakeLists.txt  example.cnf  long.cnf  long2.cnf  output.proof
cadical/src/: cadical.cpp  decide.cpp  internal.cpp  internal.hpp
cfg/: a2c.yaml  seed0.yaml  seed0_t64.yaml
data/instances/: test.lst  train.lst  val.lst
data/instances/test/f100-430/: uf100-0415.cnf  uf100-0417.cnf  uf100-0418.cnf  uf100-042.cnf  uf100-0421.cnf  uf100-0423.cnf  uf100-0424.cnf  uf100-0428.cnf  uf100-043.cnf  uf100-0433.cnf  uf100-0435.cnf  uf100-0436.cnf  uf100-0438.cnf  uf100-0439.cnf  uf100-044.cnf  uf100-0440.cnf  uf100-0442.cnf  uf100-0445.cnf  uf100-0446.cnf  uf100-045.cnf  uf100-0450.cnf  uf100-0452.cnf  uf100-0454.cnf  uf100-0456.cnf  uf100-0729.cnf  uf100-073.cnf  uf100-0730.cnf  uf100-0731.cnf  uf100-0732.cnf  uf100-0733.cnf  uf100-0734.cnf  uf100-0735.cnf  uf100-0736.cnf  uf100-0737.cnf  uf100-0738.cnf  uf100-0739.cnf  uf100-074.cnf  uf100-0740.cnf  uf100-0741.cnf  uf100-0742.cnf  (+212 more)
data/instances/test/f50-218/: uf50-0413.cnf  uf50-0417.cnf  uf50-0418.cnf  uf50-0419.cnf  uf50-0421.cnf  uf50-0422.cnf  uf50-0428.cnf  uf50-043.cnf  uf50-0430.cnf  uf50-0434.cnf  uf50-0436.cnf  uf50-0437.cnf  uf50-0438.cnf  uf50-0439.cnf  uf50-0441.cnf  uf50-0442.cnf  uf50-0443.cnf  uf50-0444.cnf  uf50-0445.cnf  uf50-0448.cnf  uf50-0453.cnf  uf50-0456.cnf  uf50-0457.cnf  uf50-0458.cnf  uf50-0729.cnf  uf50-073.cnf  uf50-0730.cnf  uf50-0731.cnf  uf50-0732.cnf  uf50-0733.cnf  uf50-0734.cnf  uf50-0735.cnf  uf50-0736.cnf  uf50-0737.cnf  uf50-0738.cnf  uf50-0739.cnf  uf50-074.cnf  uf50-0740.cnf  uf50-0741.cnf  uf50-0742.cnf  (+212 more)
data/instances/test/flat50-115/: flat50-20.cnf  flat50-200.cnf  flat50-204.cnf  flat50-206.cnf  flat50-30.cnf  flat50-300.cnf  flat50-301.cnf  flat50-302.cnf  flat50-303.cnf  flat50-304.cnf  flat50-305.cnf  flat50-306.cnf  flat50-307.cnf  flat50-308.cnf  flat50-309.cnf  flat50-31.cnf  flat50-310.cnf  flat50-311.cnf  flat50-312.cnf  flat50-313.cnf  flat50-314.cnf  flat50-315.cnf  flat50-316.cnf  flat50-317.cnf  flat50-318.cnf  flat50-319.cnf  flat50-32.cnf  flat50-320.cnf  flat50-321.cnf
data/instances/train/f100-430/: uf100-01.cnf  uf100-010.cnf  uf100-0100.cnf  uf100-01000.cnf  uf100-0101.cnf  uf100-0102.cnf  uf100-0103.cnf  (+1096 more)
env/: features.py  reward.py  sat_env.py
rl/models/: a2c.py
rl/rollout/: buffer.py
rl/train/: a2c_trainer.py
scripts/: debug_env_rewards.py  eval_a2c.py  make_tables.py  plot_cactus.py  plot_eval_vs_baselines.py  plot_training_curves.py  prepare_sat_instances.py  run_baselines.py  save_training_summary.py  split_fixed_counts.py  summarize.py  summarize_training.py  train_a2c.py
tests/: test_env_smoke.py  test_shapes.py
(+1813 files in other folders)
